Project name fixed

--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -24,7 +24,7 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>dafa</span>
+      <span>dafaweb</span>
       <span class="spacer"></span>
       <div *ngIf="!(isHandset$ | async)">
         <a href="#">Link 1</a>
