--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-main-nav>
+<app-main-nav [(appName)]=title>
   <!--The content below is only a placeholder and can be replaced.-->
   <div style="text-align:center">
     <h1>
