Major changes to session and login

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-main-nav [(appName)]=title [(menuDestinations)]=menuDestinations>
+<app-main-nav [(appName)]=title>
   <router-outlet></router-outlet>
+  <app-messages></app-messages>
 </app-main-nav>
