Clients component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-main-nav [(appName)]=title>
-  <router-outlet></router-outlet>
+  <div class="my-3 p-3 bg-white rounded box-shadow">
+    <router-outlet></router-outlet>
+  </div>
   <app-messages></app-messages>
 </app-main-nav>
