--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,11 @@ body {
 body {
     margin: 0;
 }
+
+.border-bottom { border-bottom: 1px solid #e5e5e5; }
+
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+.app-level-alert {
+      padding-top: 10px;
+}
