--- a/src/app/main-nav/main-nav.component.html
+++ b/src/app/main-nav/main-nav.component.html
@@ -9,7 +9,7 @@
     [opened]="!(isHandset$ | async)">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/sample">Sample</a>
+      <a mat-list-item routerLink="/dashboard/home" *ngIf="authService.isSignedIn()">Dashboard</a>
       <a mat-list-item routerLink="/sign-in" *ngIf="!authService.isSignedIn()">Sign in</a>
       <button mat-button (click)="authService.doSignOut()" *ngIf="authService.isSignedIn()">Sign out</button>
     </mat-nav-list>
@@ -27,7 +27,7 @@
       <a routerLink="/">{{ appName }}</a>
       <span class="spacer"></span>
       <div *ngIf="!(isHandset$ | async)">
-        <a routerLink="/sample">Sample</a>
+        <a routerLink="/dashboard/home" *ngIf="authService.isSignedIn()">Dashboard</a>
         <a routerLink="/sign-in" *ngIf="!authService.isSignedIn()">Sign in</a>
         <button mat-button (click)="authService.doSignOut()" *ngIf="authService.isSignedIn()">Sign out</button>
       </div>
