--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -15,7 +15,7 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <div>Card Content Here</div>          
+          <app-clients></app-clients>        
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
