--- a/src/app/dashboard/clients/clients.component.html
+++ b/src/app/dashboard/clients/clients.component.html
@@ -3,13 +3,13 @@
     <!-- Id Column -->
     <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell *matCellDef="let row">{{row._id}}</td>
+      <td mat-cell (click)="selectClient(row)" *matCellDef="let row">{{row._id}}</td>
     </ng-container>
 
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell (click)="selectClient(row)" *matCellDef="let row">{{row.name}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
