--- a/src/app/dashboard/clients/clients.component.html
+++ b/src/app/dashboard/clients/clients.component.html
@@ -9,7 +9,7 @@
     <!-- Name Column -->
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
-      <td mat-cell (click)="selectClient(row)" *matCellDef="let row">{{row.name}}</td>
+      <td mat-cell (click)="selectClient(row)" *matCellDef="let row">{{row.lastName}}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
