--- a/src/app/dashboard/clients/clients.component.html
+++ b/src/app/dashboard/clients/clients.component.html
@@ -1,9 +1,10 @@
-<div class="mat-elevation-z8">
+<div class="mat-elevation-z0">
   <table mat-table class="full-width-table" [dataSource]="dataSource" matSort aria-label="Elements">
-    <!-- Id Column -->
+    
+    <!-- Company Column -->
     <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Id</th>
-      <td mat-cell (click)="selectClient(row)" *matCellDef="let row">{{row._id}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
+      <td mat-cell (click)="selectClient(row)" *matCellDef="let row">{{row.company}}</td>
     </ng-container>
 
     <!-- Name Column -->
@@ -19,7 +20,6 @@
   <mat-paginator #paginator
       [length]="dataSource.data.length"
       [pageIndex]="0"
-      [pageSize]="5"
-      [pageSizeOptions]="[10]">
+      [pageSize]="10">
   </mat-paginator>
 </div>
