Event warnings component added

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -4,7 +4,7 @@
       <mat-card class="dashboard-card">
         <mat-card-header>
           <mat-card-title>
-            Card 1
+            Warnings
             <button
               mat-icon-button
               class="more-button"
@@ -19,7 +19,9 @@
             </mat-menu>
           </mat-card-title>
         </mat-card-header>
-        <mat-card-content class="dashboard-card-content"> </mat-card-content>
+        <mat-card-content class="dashboard-card-content">
+          <app-event-warnings></app-event-warnings>
+        </mat-card-content>
       </mat-card>
     </mat-grid-tile>
 
