Fixed change from dashboard to client page

--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -57,7 +57,7 @@
               mat-icon-button
               class="more-button"
               aria-label="Add client"
-              routerLink='/dashboard/client'
+              (click)="addNewClient()"
             >
               <mat-icon>add_circle_outline</mat-icon>
             </button>
