--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -8,15 +8,11 @@
             <button
               mat-icon-button
               class="more-button"
-              [matMenuTriggerFor]="menu"
-              aria-label="Toggle menu"
+              aria-label="Add warning"
+              (click)="addNewWarning()"
             >
-              <mat-icon>more_vert</mat-icon>
+              <mat-icon>add_circle_outline</mat-icon>
             </button>
-            <mat-menu #menu="matMenu" xPosition="before">
-              <button mat-menu-item>Add</button>
-              <button mat-menu-item>Remove</button>
-            </mat-menu>
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
