--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -16,7 +16,7 @@
           </mat-card-title>
         </mat-card-header>
         <mat-card-content class="dashboard-card-content">
-          <app-event-warnings></app-event-warnings>
+          <app-events></app-events>
         </mat-card-content>
       </mat-card>
     </mat-grid-tile>
