Event creation page loading

--- a/src/app/dashboard/client/client.component.html
+++ b/src/app/dashboard/client/client.component.html
@@ -9,7 +9,7 @@
               mat-icon-button
               class="more-button"
               (click)="addField()"
-              aria-label="Toggle menu"
+              aria-label="Add new Field"
             >
               <mat-icon>add_circle_outline</mat-icon>
             </button>
