--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -8,7 +8,7 @@
             <button
               mat-icon-button
               class="more-button"
-              aria-label="Add warning"
+              aria-label="Add new Warning"
               (click)="addNewWarning()"
             >
               <mat-icon>add_circle_outline</mat-icon>
@@ -52,7 +52,7 @@
             <button
               mat-icon-button
               class="more-button"
-              aria-label="Add client"
+              aria-label="Add new Client"
               (click)="addNewClient()"
             >
               <mat-icon>add_circle_outline</mat-icon>
