--- a/src/app/dashboard/field/field.component.html
+++ b/src/app/dashboard/field/field.component.html
@@ -1,3 +1,28 @@
+<div class="grid-container">
+  <mat-grid-list cols="2" rowHeight="350px">
+    <mat-grid-tile [colspan]="2" [rowspan]="1">
+      <mat-card class="dashboard-card">
+        <mat-card-header>
+          <mat-card-title>
+            Events
+            <button
+              mat-icon-button
+              class="more-button"
+              (click)="addEvent()"
+              aria-label="Add new Event"
+            >
+              <mat-icon>add_circle_outline</mat-icon>
+            </button>
+          </mat-card-title>
+        </mat-card-header>
+        <mat-card-content class="dashboard-card-content">
+          <app-events></app-events>
+        </mat-card-content>
+      </mat-card>
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
+
 <form [formGroup]="fieldForm" novalidate (ngSubmit)="onSubmit()">
   <mat-card class="shipping-card">
     <mat-card-header>
