--- a/src/app/dashboard/events/events.component.html
+++ b/src/app/dashboard/events/events.component.html
@@ -6,11 +6,11 @@
     matSort
     aria-label="Elements"
   >
-    <!-- Event Type Column -->
-    <ng-container matColumnDef="nameAlertType">
+    <!-- Event Type Name Column -->
+    <ng-container matColumnDef="eventTypeName">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Name</th>
       <td mat-cell (click)="selectEvent(row)" *matCellDef="let row">
-        {{ row.nameAlertType }}
+        {{ row.eventType.name }}
       </td>
     </ng-container>
 
@@ -23,18 +23,10 @@
     </ng-container>
 
     <!-- Field Column -->
-    <ng-container matColumnDef="nameField">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Field</th>
+    <ng-container matColumnDef="description">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Description</th>
       <td mat-cell (click)="selectEvent(row)" *matCellDef="let row">
-        {{ row.nameField }}
-      </td>
-    </ng-container>
-
-    <!-- Company Column -->
-    <ng-container matColumnDef="company">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Company</th>
-      <td mat-cell (click)="selectEvent(row)" *matCellDef="let row">
-        {{ row.company }}
+        {{ row.eventType.description }}
       </td>
     </ng-container>
 
