--- a/src/app/dashboard/field/field.component.html
+++ b/src/app/dashboard/field/field.component.html
@@ -1,4 +1,4 @@
-<div class="grid-container">
+<div class="grid-container" *ngIf="data._id">
   <mat-grid-list cols="2" rowHeight="350px">
     <mat-grid-tile [colspan]="2" [rowspan]="1">
       <mat-card class="dashboard-card">
